verwijderen persoonsgegevens endpoint is niet meer nodig + aanpassen gezag aanvraag om meerdere bsns mogelijk te maken en verder doorvoeren in de implementatie
