# src/main/resources/openapi-gmapi.yml
@@ -1,18 +1,13 @@
 openapi: 3.0.1
 info:
-  title: Gezagsmodule-API
+  title: Haal Centraal Gezagmodule
   description: >-
-    De Gezagsmodule-API kan op 3 manieren worden bevraagd
+    De Gezagsmodule kan worden bevraagd op basis van één of meerdere BSNs
 
-    - Gezag bepalen: input bsn 
-
-    - Gezag bepalen over een minderjarige: input BSN minderjarige
-
-    - Gezag bepalen van een meerderjarige: invoeren BSN meerderjarige
+    - Gezag bepalen: input bsn(s) 
     
-    
-    Het antwoord van de Gezagsmodule komt in de vorm (BSN minderjarige, Soort
-    Gezag, BSN meerderjarige)
+    Het antwoord van de Gezagsmodule komt in de vorm van een lijst met daarin de BSN minderjarige, Soort
+    Gezagt tussen relatie met meerderjarige en BSN meerderjarige
   version: '1.0'
 servers:
   - url: http://localhost:8080
@@ -61,94 +56,16 @@ paths:
           content:
             application/json:
               schema:
-                type: string  
-  /api/v1/opvragenBevoegdheidTotGezagMinderjarige:
-    post:
-      tags:
-        - GezagsmoduleInterface
-      description: >-
-        Bij invullen van een bsn worden de meerderjarigen met bevoegdheid tot gezag over dit (minderjarige) bsn teruggegeven.
-      operationId: opvragenBevoegdheidTotGezagMinderjarige
-      parameters:
-        - name: OIN
-          in: header
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/GezagRequest'
-        required: true
-      responses:
-        '200':
-          description: OK
-          headers:
-            TransactionID:
-              description: UUID
-              style: simple
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Gezagsrelatie'
-        '503':
-          description: Gegevensbron niet beschikbaar
-          content:
-            application/json:
-              schema:
-                type: string
-  /api/v1/opvragenBevoegdheidTotGezagMeerderjarige:
-    post:
-      tags:
-        - GezagsmoduleInterface
-      description: >-
-        Bij invullen van een bsn wordt diens bevoegdheid tot gezag over de minderjarige juridische kinderen teruggegeven.
-      operationId: opvragenBevoegdheidTotGezagMeerderjarige
-      parameters:
-        - name: OIN
-          in: header
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/GezagRequest'
-        required: true
-      responses:
-        '200':
-          description: OK
-          headers:
-            TransactionID:
-              description: UUID gegenereerd voor de transactie
-              style: simple
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Gezagsrelatie'
-        '503':
-          description: Gegevensbron niet beschikbaar
-          content:
-            application/json:
-              schema:
                 type: string
 components:
   schemas:
     GezagRequest:
       type: object
       properties:
-        bsn:
-          type: string
+        bsns:
+          type: array
+          items:
+            type: string 
     Gezagsrelatie:
       required:
         - bsnMinderjarige
